# drupy

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  dbuild.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yaml
dbuild/: objects.py  resolver.py  runner.py  targets.py
drupy/: objects.py  resolver.py  runner.py  targets.py  utils.py
examples/example/: example.site.json  project.json
examples/example/skeleton/: robots.dev.txt
examples/example/skeleton/sites/: development.settings.php  development.sites.php  production.settings.php
examples/example/skeleton/sites/default/: default.settings.php
tests/: conftest.py  objects_test.py  utils_test.py
tests/data/: test.yaml
